Se incluye npm translate. Se modifican los test para que pasen.

--- a/src/app/modules/home/components/container/container.component.scss
+++ b/src/app/modules/home/components/container/container.component.scss
@@ -1,4 +1,9 @@
-.product-info{
-  display: inline-block;
+.app-container{
+
   margin: 2%;
+
+  .product-info{
+    display: inline-block;
+
+  }
 }
