--- a/src/app/modules/home/components/container/container.component.html
+++ b/src/app/modules/home/components/container/container.component.html
@@ -1,7 +1,11 @@
 
-<div *ngFor="let product of products;index as i" class="product-info">
-  <app-product-info [product]="product"></app-product-info>
+<div class="app-container">
+  <h1>{{ 'titulo' | translate }}</h1>
+  <div *ngFor="let product of products;index as i" class="product-info">
+    <app-product-info [product]="product"></app-product-info>
+  </div>
 </div>
+
 
 
 
