Se crea pipe, test asociado y cambio en los test que usan la pipe.

--- a/src/app/shared/components/product-info/product-info.component.html
+++ b/src/app/shared/components/product-info/product-info.component.html
@@ -1,7 +1,7 @@
 <mat-card class="card">
   <mat-card-header>
     <div mat-card-avatar class="header-image"></div>
-    <mat-card-title>{{product.name}}</mat-card-title>
+    <mat-card-title>{{product.name | titleCase }}</mat-card-title>
   </mat-card-header>
   <img mat-card-image src="{{product.imageUrl}}" alt="{{product.name}}">
   <mat-card-content>
